
Good stuff, although it doesn't make the code on the client and server
any simpler. ;-/

53. [CLIENT, ADMIN] Use of Java 1.4 Preferences API to remember window position, etc.

The Ganymede client and admin console now use the Java 1.4 Preferences
API to remember window positions and various default selections from
invocation to invocation on a given client system.

-------------------- Changes from 1.0.11 to 1.0.12 -------------------

RELEASE DATE: March 1, 2004

1. [CLIENT] Properly update StringSelector count display on manual item entry

The StringSelector widget used to manipulate vectors of strings and
object references in the client was not properly updating the item
count when an item was manually entered through the text box.

2. [SERVER] Fixed regression in object event label display

I had neglected to edit the objectEventCustom.java class to cohere
with the change described in CHANGES 1.0.11#8.

3. [SERVER] Fixed exception vulnerability in admin console, scheduler code

We had an occasion in which the Ganymede scheduler terminated during
the server's normal operations, as a result of cascading failure in
the admin console notification system.  The changeStatus() method in
serverAdminProxy was not properly checking the done flag, so a
NullPointerException was thrown where the GanymedeAdmin code was only
expecting the possibility of a RemoteException.  The
NullPointerException was being thrown up through the Ganymede.debug()
call frame, which led to the scheduler being killed.

I have fixed the serverAdminProxy.changeStatus() method so that the
NullPointerException will not re-occur, and I have fixed the Ganymede
scheduler so that nothing but an actual interrupt on the scheduler
thread will cause the scheduler to terminate.

4. [SERVER] Turned off extraneous debug output from XML processing logic

I had accidentally left the debug flag enabled in the xmlobject and
xmlfield classes, which caused a lot of extra output to be displayed